# solar-shading

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakePresets.json  Dockerfile  README.adoc  SM.csv  index.html  package-lock.json  package.json  pyproject.toml  rename.sh  requirements.txt  setup.py  site.yml  sitemap.xml
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.adoc
.github/workflows/: ci.yml  init.yml
_/css/: site.css
antora/supplemental-ui/partials/: footer-content.hbs  header-content.hbs
benchmark/distributions/: CMakeLists.txt  README.md  benchmark.sh  benchmarking.py  benchmarking_int.py  benchmarking_real.py  plotresults.py  reframe_test.py  runbenchmark.sh  uniform.cpp  uniform_int.cpp  uniform_real.cpp
benchmark/distributions/src/: eigenrand_bm.cpp  mersenne_twister_bm.cpp  pcg_bm.cpp  std_bm.cpp  uniform_int.cpp  uniform_real.cpp  xoshiro_bm.cpp
benchmark/distributions/src/reframe/: eigenrand_cast_int.cpp  eigenrand_int.cpp  eigenrand_real.cpp  eigenrand_vmt_int.cpp  mersenne_twister_int.cpp  mersenne_twister_real.cpp  pcg_int.cpp  pcg_real.cpp  std_int.cpp  std_real.cpp  xoshiro_int.cpp  xoshiro_real.cpp
docs/: CMakeLists.txt  CTestTestfile.cmake  Makefile  antora.yml  cmake_install.cmake
docs/asciidoc/extensions/: plotly.js
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: abstract.adoc  antora.adoc  boundingvolumes.adoc  bv.adoc  bvh.adoc  chap1.adoc  chap2.adoc  chap3.adoc  cmake.adoc  index.adoc  introduction.adoc  overview.adoc  quickstart.adoc  rapport.adoc  report.adoc  rng.adoc  shadingmask.adoc  tools.adoc  traversal.adoc
docs/modules/ROOT/pages/data/: format.adoc  management.adoc
docs/modules/ROOT/pages/devora/: chap1.adoc  chap2.adoc  chap3.adoc  introduction.adoc  report.adoc
docs/modules/ROOT/pages/documentation/: dataformat.adoc  shadingmask.adoc  shadingmaskdatamanagement.adoc
docs/modules/ROOT/pages/env/: githubactions.adoc  jupyter.adoc
docs/modules/ROOT/partials/: bib.adoc
docs/modules/internships/: nav.adoc
docs/modules/internships/pages/: PERFORMANCE.adoc
docs/modules/internships/pages/devora/: chap1.adoc  chap2.adoc  chap3.adoc  (+1 more)
ktirio/: CMakeLists.txt
ktirio/shadingmask/: CMakeLists.txt  __init__.py  visualization.py
ktirio/tests/: CMakeLists.txt  conftest.py  test_surface.py  test_volume.py
python/shadingmask/: __init__.py  shadingmask.cpp
python/tests/: test_surface.py  test_volume.py
results/csv/: results.csv  uniform_int.csv  uniform_real.csv
results/meteo/: openmeteo.json
solar-shading/: abstract.html  antora.html  boundingvolumes.html  bv.html  bvh.html  chap1.html  chap2.html  chap3.html  cmake.html  conclusion.html  githubactions.html  index.html  introduction.html  jupyter.html  overview.html  quickstart.html  rapport.html  raytracing.html  rename.html  report.html  rng.html  shadingmask.html  tools.html  traversal.html  vscode.html
solar-shading/_attachments/data/: format.ipynb  management.ipynb
solar-shading/_attachments/documentation/: dataformat.ipynb  shadingmaskdatamanagement.ipynb
solar-shading/_attachments/env/: jupyter.ipynb
solar-shading/data/: format.html  management.html  shadingmask.html
solar-shading/devora/: chap1.html  chap2.html  chap3.html  conclusion.html  introduction.html  report.html
solar-shading/documentation/: dataformat.html  shadingmask.html  shadingmaskdatamanagement.html
solar-shading/env/: antora.html  cmake.html  githubactions.html  jupyter.html  vscode.html
solar-shading/internships/: PERFORMANCE.html
solar-shading/internships/devora/: chap1.html  chap2.html  chap3.html  introduction.html
solar-shading/metrics/: performance.html
src/: .tests.example_ShadingMasks  .tests.example_ShadingMasks_surfaceMesh  .tests.example_ShadingMasks_volumeMesh  .tests.example_shading_masks  .tests.example_shading_masks_surface_mesh  .tests.example_shading_masks_volume_mesh  .tests.laplacian  .tests.toolbox  AnalyseNornal2.py  AnalyseScaling2.py  Bvh_GPU.cu  Bvh_GPU.cuh  CMakeLists.txt  CMakeListsNormalBevor.txt  CMakeListsOld.txt  README.adoc  SM_Specx.cpp  Specx_Shading_mask.hpp  Specx_Shading_mask_compute copy.hpp  Specx_Shading_mask_compute.hpp  Specx_Shading_mask_init.hpp  Specx_Shading_mask_save.hpp  Specx_Solar_Shading.cpp  TasksDispach.hpp  Tools.hpp  ToolsMetaProg.hpp  bvh.cpp  bvh.hpp  check_diff.sh  example_ShadingMasks.cpp  example_ShadingMasks_GPU.cpp  example_ShadingMasks_comparison.cpp  example_shading_masks.cpp  laplacian.cpp  lemoine.code-workspace  napp.hpp  perez.hpp  run_all.sh  run_examples.sh  shadingMask.hpp  (+16 more)
src/cases/19_buildings_strasbourg/: 19_buildings_strasbourg.cfg  19_buildings_strasbourg.json  19_buildings_strasbourg.msh  19buildingsStrasbourg_vol.txt
src/cases/19buildingsStrasbourg/: 19buildingsStrasbourg.cfg
src/cases/aggregatedMarkers/: newyork_aggregatedmarkers.cfg  strasbourg_M0_lod0_ai.cfg  strasbourg_M0_lod1_ai.cfg
src/cases/electric/: 2d.cfg  2d.geo  2d.json
src/cases/exampleShadingMask/: exampleShadingMask.cfg  exampleShadingMaskSurface.cfg
src/cases/example_shading_mask/: exampleShadingMaskSurface.json  example_shading_mask.cfg  example_shading_mask.geo  example_shading_mask.json  example_shading_mask_face.cfg  example_shading_mask_face.json  example_shading_mask_surface.cfg  example_shading_mask_surface.json  example_shading_mask_surface_face_id.txt  example_shading_mask_surface_surfid.txt  skin_mesh_example.geo  skin_mesh_example_face.geo
src/cases/iloomiDistrict/: iloomi_district_faces.cfg  iloomi_district_faces.json  quartier_faches_bd_faceid.txt
src/cases/laplacian/fin/: fin2d.json
src/cases/str/: strasbourg_aggregatedmarkers.cfg  strasbourg_aggregatedmarkers.json
src/ktirio/solar_shading/preprocessing/: extractMarkerList.py
src/ktirio/solar_shading/visualization/: example_csvfile.csv  plot.py
src/preprocessing/: extractMarkerList.py
src/tmp/: DATA.csv
src/visualization/: difference_visualization.py  example_csvfile.csv  shadingMask_skyModel_visualization.py  shadingMask_visualization.py  shadingMask_visualization_SPdiagram.py  shading_mask_visualization.py
